Changelog
---------

v5.3.0:
 ExerciseViewer changes:
  - SF Bug #3203396: TopoGrafixGpxParser: parse GPX files with missing 
    timestamps in track metadata
  - update to Guice 3.0 (final)

v5.2.0:
 SportsTracker changes:
  - added IntelliJ IDEA project files to Mercurial ignore list 
    (IDEA can now also be used for development)
  - update to BSAF 1.9 GA (final), which contains many bugfixes, also for the 
    Command+Q-Shutdown problem on MacOS X
  - update to JUnit 4.8.2
  - update to Guice 3.0 (RC2)
    - use of standardized javax.inject annotations (JSR 330) for Dependency 
      Injection (so the DI Container could be easily exchanged)
    - Guice API is only used for DI Container setup
  - Groovy updated to version 1.7.6
  - SportsTracker has been successfully tested on Java SE 7 (Developer 
    preview release), it compiles and runs without any problems
    
 ExerciseViewer changes:
  - bugfix in GarminFitParserTest (date comparision fails on other timezones
    than Europe/Berlin)
  - TopoGrafix GPX v1.1 support (SourceForge Feature request #1910611)
    - contains mostly track data only, but also supports optional time and 
      altitude data 
  - Main panel: display only available data and "n.a." otherwise 
    (instead of 0 when missing)
  - Timex PWX support (by Robert Schultz <schultzr@users.sourceforge.net>):
    - added support for Timex Ironman Global Trainer PWX exercises, including
      GPS data (displayed in Track panel) and cadence data
    - unit test for Timex Ironman Global Trainer PWX files
  
 Translations:
  - updated spanish translation by Luis Llorente Campo
    <luisllorente@luisllorente.com>

v5.1.0:
 SportsTracker changes:
  - updated to SwingX 1.6.1 (DatePicker improvements)
  
 ExerciseViewer changes:
  - Garmin FIT Parser (support for Garmin FIT activity files):
    - full support for all data which can be shown in ExerciseViewer
      (summary, lap data, sample data, track/map data, temperature data)